monticore-generator/src/test/resources/cocos/invalid/A4025/A4025_sub_e.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4025;

grammar A4025_sub_e extends cocos.invalid.A4025.A4025_super_e {

 B;

 A = c:B;

}
